ensure long sentences wrap

--- a/unicorecmsmnm/static/css/style.css
+++ b/unicorecmsmnm/static/css/style.css
@@ -4,7 +4,7 @@
 
 /*  GLOBAL  */
 
-    html, body { margin: 0; padding: 0; color: #000; background: #fff; font-size: 1em; font-family: Arial, Helvetica, sans-serif; line-height: 1.5; -webkit-text-size-adjust: none; }
+    html, body { margin: 0; padding: 0; color: #000; background: #fff; font-size: 1em; font-family: Arial, Helvetica, sans-serif; line-height: 1.5; -webkit-text-size-adjust: none; word-wrap: break-word;}
     input, select, textarea { font-size: 95%; font-family: Arial, Helvetica, sans-serif; }
     a { color: #dc5a11; text-decoration: none; }
     .clear { width: 100%; height: 0px; clear: both; display: block; }
@@ -19,7 +19,7 @@
         background: #EBEBEB;
         color: #bbb;
     }
-    
+
     [dir='rtl'] .lang {
         text-align: left;
     }
@@ -59,7 +59,7 @@
         #content .intro { padding: 20px; font-weight: bold; text-transform: uppercase; text-align: center;}
         #content .detail { padding: 0 25px; }
         .content li{margin: 15px 0 15px 0;}
-        
+
         .featured{ background: #cd3209; color: #fff; text-align: center; text-transform: uppercase; margin-top: 10px;}
         .featured a { padding: 15px; display: block; border-bottom: 5px solid #dc5a11; text-align: left; color: #fff; }
 
@@ -86,7 +86,7 @@
 
 /* Mobile "preview" for large screens */
 
-    @media screen and (min-width: 1024px) { 
+    @media screen and (min-width: 1024px) {
         html {
             background-color: #333;
         }
